- Fixed overflow error in message box - Fixed badge-token-mint error

--- a/src/block-frontend/public/assets/css/style.scss
+++ b/src/block-frontend/public/assets/css/style.scss
@@ -2644,6 +2644,10 @@ table {
 .or-waiting-modal {
 }
 
+.modal-msg-body-layout {
+	overflow: scroll;
+}
+
 .w-fit-content {
 	width: fit-content;
 }
